--- a/workspace/microservices/cart-service/package.json
+++ b/workspace/microservices/cart-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "registry-service",
+  "name": "cart-service",
   "version": "0.0.1",
   "private": true,
   "description": "",
@@ -15,9 +15,12 @@
     "@opentelemetry/exporter-trace-otlp-http": "^0.39.1",
     "@opentelemetry/sdk-metrics": "^1.13.0",
     "@opentelemetry/sdk-node": "^0.39.1",
+    "@redis/client": "^1.5.7",
+    "axios": "^1.4.0",
     "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "semver": "^7.6.0"
+    "got": "^12.6.0",
+    "mongoose": "^7.1.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
