--- a/workspace/microservices/order-service/package.json
+++ b/workspace/microservices/order-service/package.json
@@ -10,16 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
-    "express": "^4.18.2",
-    "got": "^12.6.0",
-    "mongoose": "^7.1.1",
-    "morgan": "^1.10.0",
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/auto-instrumentations-node": "^0.37.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.39.1",
     "@opentelemetry/sdk-metrics": "^1.13.0",
-    "@opentelemetry/sdk-node": "^0.39.1"
+    "@opentelemetry/sdk-node": "^0.39.1",
+    "amqplib": "^0.10.3",
+    "axios": "^1.4.0",
+    "express": "^4.18.2",
+    "got": "^12.6.0",
+    "mongoose": "^7.1.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
